# django-perf-demo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
locale/pt_BR/LC_MESSAGES/: django.mo  django.po
store/: admin.py  conftest.py  context_processors.py  factories.py  middleware.py  models.py  urls.py  views.py
store/management/commands/: seed.py
store/migrations/: 0001_initial.py
store/static/store/css/: base.css  docs.css  playground.css
store/templates/store/: base.html  books_fast.html  books_slow.html  count_fast.html  count_slow.html  docs.html  fields_fast.html  fields_slow.html  index.html  paginate_fast.html  paginate_slow.html  playground.html  tags_fast.html  tags_slow.html  tools.html
store/templatetags/: query_tags.py
store/tests/: test_count.py  test_n_plus_one_fk.py  test_n_plus_one_m2m.py  test_pagination.py  test_select_fields.py
